# swaggerSchema/swagger_output.json
@@ -23,6 +23,10 @@
     {
       "name": "log",
       "description": "Endpoints"
+    },
+    {
+      "name": "Task",
+      "description": "Endpoints"
     }
   ],
   "paths": {
@@ -63,7 +67,7 @@
         "tags": [
           "User"
         ],
-        "summary": "Create a new user",
+        "summary": "Sign up",
         "description": "",
         "responses": {
           "201": {
@@ -292,6 +296,49 @@
         }
       }
     },
+    "/users/token": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Get a new refresh token from access token",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "New Access Token generated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/accessToken"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input data"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "refreshToken": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJwYXlsb2FkIjp7InVzZXJpZCI6NH0sImlhdCI6MTcyNDE1MDU1OCwiZXhwIjoxNzI0MTUyMzU4fQ.Gy2YtEi8dY419wPzcxQ1EkR5MNkNXRlSP6tZOeMNJtQ"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/boat/": {
       "get": {
         "tags": [
@@ -299,6 +346,15 @@
         ],
         "summary": "Get all boats",
         "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Successfully retrieved list of boats",
@@ -321,6 +377,15 @@
         ],
         "summary": "Create a new boat",
         "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Boat created successfully",
@@ -386,6 +451,13 @@
               "type": "integer"
             },
             "description": "Boat ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -425,6 +497,13 @@
               "type": "integer"
             },
             "description": "Boat ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -488,6 +567,13 @@
               "type": "integer"
             },
             "description": "Boat ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -513,6 +599,15 @@
         ],
         "summary": "Get all logs",
         "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Successfully retrieved list of logs",
@@ -549,6 +644,13 @@
               "type": "integer"
             },
             "description": "Boat ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -590,6 +692,13 @@
               "type": "integer"
             },
             "description": "Log ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -629,6 +738,13 @@
               "type": "integer"
             },
             "description": "Log ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -678,6 +794,13 @@
               "type": "integer"
             },
             "description": "Log ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -703,6 +826,15 @@
         ],
         "summary": "Add coordinates to a log",
         "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Coordinates added successfully",
@@ -752,6 +884,13 @@
               "type": "integer"
             },
             "description": "Boat ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -783,9 +922,295 @@
           }
         }
       }
+    },
+    "/tasks/": {
+      "get": {
+        "tags": [
+          "Task"
+        ],
+        "summary": "Get all tasks",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully retrieved list of tasks",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/getAllTasksResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/tasks/{id}": {
+      "get": {
+        "tags": [
+          "Task"
+        ],
+        "summary": "Get task by ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Task ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully retrieved task data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/getTaskByIdResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Task not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Task"
+        ],
+        "summary": "Update an existing task",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Task ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Task updated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/updateTaskResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input data"
+          },
+          "404": {
+            "description": "Task not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/createTaskDTO"
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Task"
+        ],
+        "summary": "Delete a task",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Task ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Task deleted successfully"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Task not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/tasks/boat/{boat_id}/tasks": {
+      "get": {
+        "tags": [
+          "Task"
+        ],
+        "summary": "Get tasks by boat ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "boat_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Boat ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully retrieved tasks for the boat",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/getTasksByBoatIdResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Boat not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/tasks/{boat_id}": {
+      "post": {
+        "tags": [
+          "Task"
+        ],
+        "summary": "Create a new task",
+        "description": "",
+        "parameters": [
+          {
+            "name": "boat_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Boat ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Task created successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/createTaskResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input data"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/createTaskDTO"
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    },
     "schemas": {
       "userDTO": {
         "type": "object",
@@ -1190,7 +1615,75 @@
       },
       "addCoordinatesResponse": {
         "$ref": "#/components/schemas/logDTO"
+      },
+      "taskDTO": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number",
+            "example": 1
+          },
+          "boat_id": {
+            "type": "number",
+            "example": 1
+          },
+          "description": {
+            "type": "string",
+            "example": "Departed from dock"
+          },
+          "status": {
+            "type": "string",
+            "example": "To Complete"
+          },
+          "created_on": {
+            "type": "string",
+            "example": "2023-07-04T12:00:00Z"
+          }
+        }
+      },
+      "createTaskDTO": {
+        "type": "object",
+        "properties": {
+          "description": {
+            "type": "string",
+            "example": "Departed from dock"
+          },
+          "status": {
+            "type": "string",
+            "example": "To Complete"
+          },
+          "created_on": {
+            "type": "string",
+            "example": "2023-07-04T12:00:00Z"
+          }
+        }
+      },
+      "getAllTasksResponse": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/taskDTO"
+        }
+      },
+      "getTasksByBoatIdResponse": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/taskDTO"
+        }
+      },
+      "getTaskByIdResponse": {
+        "$ref": "#/components/schemas/taskDTO"
+      },
+      "createTaskResponse": {
+        "$ref": "#/components/schemas/taskDTO"
+      },
+      "updateTaskResponse": {
+        "$ref": "#/components/schemas/taskDTO"
       }
     }
-  }
+  },
+  "security": [
+    {
+      "bearerAuth": []
+    }
+  ]
 }
